# TypstKit

./: .gitignore  ASSET-MIGRATION.md  Package.swift  README.md
Binaries/TypstNative.xcframework/: Info.plist
Binaries/TypstNative.xcframework/ios-arm64/TypstNative.framework/: Info.plist
Binaries/TypstNative.xcframework/macos-arm64_x86_64/TypstNative.framework/: TypstNative
Sources/TypstAssetKit/: Base64Stream.swift  ByteStreams.swift  TypstAssetRef.swift  TypstAssetStore.swift  TypstDocumentExporter.swift  TypstDocumentImporter.swift  TypstImageFormat.swift  TypstImageReferenceScanner.swift  TypstInlineImageSyntax.swift
Sources/TypstCompilerKit/: Exports.swift  NativeTypstCompiler.swift  NativeTypstCompilerProtocol.swift  NativeTypstController.swift  TypstImageResolver.swift  TypstPackageManager.swift  TypstProviding.swift
Sources/TypstEditorKit/: NativeTypstEditorView.swift  NativeTypstPDFPreview.swift  NativeTypstRenderView.swift  TypstEditor.swift  TypstEditorController.swift  TypstSyntax.swift
Sources/TypstNativeBindings/: Sendable+Bindings.swift  TypstNative.swift
Sources/TypstNativeFFI/: shim.c
Tests/TypstAssetKitTests/: Base64StreamTests.swift  RoundTripTests.swift  TestSupport.swift  TypstAssetStoreTests.swift  TypstDocumentExporterTests.swift  TypstDocumentImporterTests.swift  TypstImageReferenceScannerTests.swift
rust/: build-xcframework.sh
rust/typst-native/: Cargo.toml  build.rs  uniffi.toml
rust/typst-native/src/: diagnostics.rs  fonts.rs  lib.rs  world.rs
(+3 files in other folders)
